--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -3,11 +3,28 @@
   "configurations": [
     {
       "name": "C/C++ Runner: Debug Session",
-      "type": "lldb",
+      "type": "cppdbg",
       "request": "launch",
+      "program": "${workspaceFolder}/build/Debug/outDebug",
       "args": [],
-      "cwd": "/Users/margarita/Documents/210labs/210labs/lab_27/main",
-      "program": "/Users/margarita/Documents/210labs/210labs/lab_27/main/build/Debug/outDebug"
+      "stopAtEntry": false,
+      "cwd": "${workspaceFolder}",
+      "environment": [],
+      "externalConsole": false,
+      "MIMode": "lldb",
+      "setupCommands": [
+        {
+          "description": "Enable pretty-printing for gdb",
+          "text": "-enable-pretty-printing",
+          "ignoreFailures": true
+        }
+      ],
+      "preLaunchTask": "build", 
+      "miDebuggerPath": "/usr/bin/lldb", 
+      "logging": {
+        "moduleLoad": false,
+        "trace": true
+      }
     }
   ]
 }
